--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar ">
     <div class="container">
-        <!-- <img src="../../assets/saleLogo.jpg" alt=""> -->
+        <img src="../../assets/salelogo2.jpg" alt="">
       <!-- <a class="navbar-brand" href="#">Sales Management System</a> -->
       <p>Sales Management System</p>
       <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
