--- a/src/app/sales/add-sales/add-sales.component.html
+++ b/src/app/sales/add-sales/add-sales.component.html
@@ -5,12 +5,8 @@
             <input matInput formControlName="productName" />
         </mat-form-field>
         <mat-form-field>
-            <mat-label>Product Selling Price</mat-label>
+            <mat-label>Product Price</mat-label>
             <input matInput formControlName="productPrice" />
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Product Cost Price</mat-label>
-            <input matInput formControlName="productCostPrice" />
         </mat-form-field>
         <mat-form-field>
             <mat-label>Product Quantity</mat-label>
