--- a/src/app/customers/list-customers/list-customers.component.html
+++ b/src/app/customers/list-customers/list-customers.component.html
@@ -49,7 +49,7 @@
       <td mat-cell *matCellDef="let element">
         <div class="actn-btn">
           <div class="child-btn">
-            <button matTooltip="Edit" mat-icon-button>
+            <button matTooltip="Edit" (click)="editCustomer()" mat-icon-button>
               <mat-icon color="primary">edit</mat-icon>
             </button>
           </div>
