--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,10 @@
       <mat-card class="matcard-customer">
         <a mat-list-item>
           <mat-icon class="customer-icon" mat-list-icon> groups </mat-icon>
-          <p mat-line>{{ customerCount }}+</p>
+          <p mat-line>
+            {{ customerCounter
+            }}<span *ngIf="customerCounter != customerCount">+</span>
+          </p>
           <p>Total Customers</p>
         </a>
       </mat-card>
@@ -12,32 +15,60 @@
     <div class="upper-card">
       <mat-card class="matcard-customer">
         <a mat-list-item>
+          <mat-icon class="customer-icon" mat-list-icon>
+            rocket_launch
+          </mat-icon>
+          <p mat-line>{{ salesCounter }} <span *ngIf="salesCounter!=salesCounterNew">+</span></p>
+          <p>Sell Product</p>
+        </a>
+      </mat-card>
+    </div>
+    <div class="upper-card">
+      <mat-card class="matcard-customer">
+        <a mat-list-item>
           <mat-icon class="customer-icon" mat-list-icon>bubble_chart</mat-icon>
-          <p mat-line>{{ productCount }}+</p>
+          <p mat-line>
+            {{ productCounter
+            }}<span *ngIf="productCount != productCounter">+</span>
+          </p>
           <p>Total Products</p>
         </a>
       </mat-card>
     </div>
   </div>
-  <div class="upper-card-layer">
-    <div class="upper-card">
-      <mat-card> 
+
+  <div class="middle-card-layer">
+    <div class="middle-card">
+      <mat-card>
         <div>
-          <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'150px'}"></canvasjs-chart>    
-      </div>         
+          <canvas style="width: 100%; height: 160px" id="MyChart">{{
+            chart
+            }}</canvas>
+        </div>
       </mat-card>
     </div>
-    <div class="upper-card">
-      <mat-card> 
+    <div class="middle-card">
+      <mat-card>
         <div>
-          <canvas id="canvas" style="width: 100%; height: 180px;">{{chart}}</canvas>
+          <!-- <canvas id="canvas" style="width: 100%; height: 230px">{{
+            chart
+            }}</canvas> -->
+            <div class="chart-container">
+              <canvas  id="MyPieChart" >{{ chart }}</canvas>
+        </div>
         </div>
       </mat-card>
     </div>
   </div>
+
   <div class="last-card-layer">
     <div class="upper-card last-card">
-      <mat-card> </mat-card>
+      <mat-card>
+        <canvas id="canvas" style="width: 100%; height: 180px">{{
+          chart
+          }}</canvas>
+        <!-- <canvasjs-chart [options]="chartOptions" [styles]="{ width: '100%', height: '150px' }"></canvasjs-chart> -->
+      </mat-card>
     </div>
   </div>
 </div>
