--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -46,7 +46,7 @@
       <td mat-cell *matCellDef="let element">
         <div class="actn-btn">
           <div class="child-btn">
-            <button matTooltip="Edit" mat-icon-button>
+            <button matTooltip="Edit" (click)="editProduct()" mat-icon-button>
               <mat-icon  color="primary">edit</mat-icon>
             </button>
           </div>
