--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -1,1 +1,95 @@
-<p>sales works!</p>
+<mat-card class="example-card">
+  <div class="add-customer">
+    <div class="add-btn">
+    </div>
+    <div class="add-btn">
+      <button mat-button color="primary" (click)="addSales()">Add Sales</button>
+    </div>
+  </div>
+  <br>
+  <mat-form-field>
+    <mat-label>Search Product...</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Kiwi" #input />
+  </mat-form-field>
+
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!-- cust_id Column -->
+    <ng-container matColumnDef="cust_Id">
+      <th mat-header-cell *matHeaderCellDef>Customer</th>
+      <td mat-cell *matCellDef="let element">Id : {{ element.customer.id }}
+        <p>
+          Name : {{ element.customer.name }}
+        </p>
+      </td>
+    </ng-container>
+    <!-- prod_Id Column -->
+    <ng-container matColumnDef="prod_Id">
+      <th mat-header-cell *matHeaderCellDef>Product</th>
+      <td mat-cell *matCellDef="let element">Id : {{ element.product.id }}<p>
+          Name : {{ element.product.name }}
+        </p>
+      </td>
+    </ng-container>
+    <!-- Product Quantity Column -->
+    <ng-container matColumnDef="productQuantity">
+      <th mat-header-cell *matHeaderCellDef>Product Quantity</th>
+      <td mat-cell *matCellDef="let element">{{ element.productQuantity }}</td>
+    </ng-container>
+    <!-- Total Amount Column -->
+    <ng-container matColumnDef="totalAmount">
+      <th mat-header-cell *matHeaderCellDef>Total Amount</th>
+      <td mat-cell *matCellDef="let element">{{ element.totalAmount }}</td>
+    </ng-container>
+    <!-- Current Payment Column -->
+    <ng-container matColumnDef="currentPayment">
+      <th mat-header-cell *matHeaderCellDef>Current Payment</th>
+      <td mat-cell *matCellDef="let element">{{ element.currentPayment }}</td>
+    </ng-container>
+    <!-- Remaning Payment Column -->
+    <ng-container matColumnDef="remaningPayment">
+      <th mat-header-cell *matHeaderCellDef>Remaning Payment</th>
+      <td mat-cell *matCellDef="let element">{{ element.remaningPayment }}</td>
+    </ng-container>
+    <!-- Payment Mode Column -->
+    <ng-container matColumnDef="paymentMode">
+      <th mat-header-cell *matHeaderCellDef>Payment Mode</th>
+      <td mat-cell *matCellDef="let element">{{ element.paymentMode }}</td>
+    </ng-container>
+    <!-- createdAt Column -->
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef>createdAt</th>
+      <td mat-cell *matCellDef="let element">{{ element.createdAt|date}}</td>
+    </ng-container>
+    <!-- action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>
+        Action
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <div class="actn-btn">
+          <div class="child-btn">
+            <button matTooltip="Edit" mat-icon-button>
+              <mat-icon color="primary">edit</mat-icon>
+            </button>
+          </div>
+          <div class="child-btn">
+            <button matTooltip="Delete" mat-icon-button>
+              <mat-icon color="warn">delete</mat-icon>
+            </button>
+          </div>
+        </div>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">
+        No data matching the filter "{{ input.value }}"
+      </td>
+    </tr>
+
+  </table>
+  <mat-paginator #paginator [pageSizeOptions]="[8, 15, 20]" showFirstLastButtons></mat-paginator>
+
+
+</mat-card>
