fixed header and navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="test">
   <app-header></app-header>
   <div style="display: flex; flex-direction: row; width: 100%">
     <app-sidebar></app-sidebar>
