--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,4 +1,6 @@
+
 .sidenav {
+  /* font-family:Georgia, 'Times New Roman', Times, serif; */
   width: 200px;
   height: 90vh;
   background-color: blueviolet;
