--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,13 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
-:root {
-  font-size: 10px;
-
-  --neon-text-color: #f40;
-  --neon-border-color: #08f;
-}
 .container img{
   height:50px;
-  width: 70px;
+  width: 60px;
+}
+.navbar{
+  margin: 0;
+  padding: 0;
 }
 p {
   font-size: 20px;
@@ -19,51 +16,11 @@ p {
   border-radius: 2rem;
   text-transform: uppercase;
   animation: flicker 1.5s infinite alternate;
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
+
 p:hover {
   color: white;
   border: 1px solid white;
   background-color: blueviolet;
 
-}
-p::-moz-selection {
-  background-color: var(--neon-border-color);
-  color: var(--neon-text-color);
-}
-
-p::selection {
-  background-color: var(--neon-border-color);
-  color: var(--neon-text-color);
-}
-
-p:focus {
-  outline: none;
-}
-
-@keyframes flicker {
-  0%,
-  19%,
-  21%,
-  23%,
-  25%,
-  54%,
-  56%,
-  100% {
-    text-shadow: -0.2rem -0.2rem 1rem #fff, 0.2rem 0.2rem 1rem #fff,
-      0 0 2rem var(--neon-text-color), 0 0 4rem var(--neon-text-color),
-      0 0 6rem var(--neon-text-color), 0 0 8rem var(--neon-text-color),
-      0 0 10rem var(--neon-text-color);
-
-    box-shadow: 0 0 0.5rem #fff, inset 0 0 0.5rem #fff,
-      0 0 2rem var(--neon-border-color), inset 0 0 2rem var(--neon-border-color),
-      0 0 4rem var(--neon-border-color), inset 0 0 4rem var(--neon-border-color);
-  }
-
-  20%,
-  24%,
-  55% {
-    text-shadow: none;
-    box-shadow: none;
-  }
 }
