--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+/* @import url('https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap'); */
+
+
+body{
+    font-family: 'Sofia';font-size: 22px;
+}
