--- a/src/app/sales/add-sales/add-sales.component.html
+++ b/src/app/sales/add-sales/add-sales.component.html
@@ -1,43 +1,66 @@
 <div class="container">
-    <div class="example-container" [formGroup]="formGroup">
-        <mat-form-field>
-            <mat-label>Product Name</mat-label>
-            <input matInput formControlName="productName" />
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Product Price</mat-label>
-            <input matInput formControlName="productPrice" />
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Product Quantity</mat-label>
-            <input matInput formControlName="productQuantity" />
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Product category</mat-label>
-            <mat-select formControlName="productCategory">
-                <mat-option value="Electronic">Electronic</mat-option>
-                <mat-option value="Fruit">Fruit</mat-option>
-                <mat-option value="Toy">Toy</mat-option>
-                <mat-option value="Fertilizer">Fertilizer</mat-option>
-                <mat-option value="Seeds">Seeds</mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Product Status</mat-label>
-            <mat-select formControlName="status">
-                <mat-option value="1">Active</mat-option>
-                <mat-option value="0">Inactive</mat-option>
-            </mat-select>
-        </mat-form-field>
+  <h3>Add Sales</h3>
+  <div class="example-container" [formGroup]="formGroup">
+    <mat-form-field>
+      <mat-label>Select Customer</mat-label>
+      <mat-select matInput formControlName="customerName">
+        <mat-option
+          *ngFor="let customer of customerList"
+          [value]="customer.id"
+          >{{ customer.name }}</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Select Product</mat-label>
+      <mat-select
+        matInput
+        (selectionChange)="onSelectionChange($event.value)"
+        formControlName="productName"
+      >
+        <mat-option *ngFor="let product of productList" [value]="product.id">{{
+          product.name
+        }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field [contentEditable]="false">
+      <mat-label>Product Price</mat-label>
+      <input matInput formControlName="productPrice" readonly="true" />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Product Quantity</mat-label>
+      <input
+        (keyup)="totalAmount($event)"
+        matInput
+        type="number"
+        formControlName="productQuantity"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Total Ammount</mat-label>
+      <input matInput formControlName="totalAmount" readonly="" />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>current Payment</mat-label>
+      <input matInput type="number" formControlName="currentPayment" />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Select Payment Mode</mat-label>
+      <mat-select matInput formControlName="paymentMode">
+        <mat-option>Cash</mat-option>
+        <mat-option>Upi</mat-option>
+        <mat-option>Credit</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="example-button-row">
+    <div class="btn-layer">
+      <button class="close-btn" mat-button color="warn" (click)="close()">
+        {{ "Close" }}
+      </button>
+      <button class="add-btn" mat-button color="primary" (click)="add()">
+        {{ "Add" }}
+      </button>
     </div>
-    <div class="example-button-row">
-        <div class="btn-layer">
-            <button class="close-btn" mat-button color="warn" (click)="close()">
-                {{ "Close" }}
-            </button>
-            <button class="add-btn" mat-button color="primary" (click)="add()">
-                {{ "Add" }}
-            </button>
-        </div>
-    </div>
+  </div>
 </div>
