--- a/src/app/sales/add-sales/add-sales.component.html
+++ b/src/app/sales/add-sales/add-sales.component.html
@@ -4,21 +4,19 @@
     <mat-form-field>
       <mat-label>Select Customer</mat-label>
       <mat-select matInput formControlName="customerName">
-        <mat-option
-          *ngFor="let customer of customerList"
-          [value]="customer.id"
-          >{{ customer.name }}</mat-option
-        >
+        <mat-option *ngFor="let customer of customerList" [value]="customer">{{
+          customer.name
+        }}</mat-option>
       </mat-select>
     </mat-form-field>
     <mat-form-field>
       <mat-label>Select Product</mat-label>
       <mat-select
         matInput
-        (selectionChange)="onSelectionChange($event.value)"
+        (selectionChange)="onSelectionChange($event.value.id)"
         formControlName="productName"
       >
-        <mat-option *ngFor="let product of productList" [value]="product.id">{{
+        <mat-option *ngFor="let product of productList" [value]="product">{{
           product.name
         }}</mat-option>
       </mat-select>
@@ -47,9 +45,9 @@
     <mat-form-field>
       <mat-label>Select Payment Mode</mat-label>
       <mat-select matInput formControlName="paymentMode">
-        <mat-option>Cash</mat-option>
-        <mat-option>Upi</mat-option>
-        <mat-option>Credit</mat-option>
+        <mat-option value="Cash">Cash</mat-option>
+        <mat-option value="Upi">Upi</mat-option>
+        <mat-option value="Credit">Credit</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
