--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,31 +1,47 @@
 <nav class="sidenav">
   <ul>
     <li>
-      <a [routerLink]="''"><i class="fas fa-home"></i>Dashboard</a>
+      <a [routerLink]="''"><mat-icon>home</mat-icon>Dashboard</a>
     </li>
     <li>
-      <a routerLinkActive="active" [routerLink]="'products'"><mat-icon mat-list-icon>bubble_chart</mat-icon>Products</a>
+      <a routerLinkActive="active" [routerLink]="'products'"
+        ><mat-icon mat-list-icon>bubble_chart</mat-icon>Products</a
+      >
     </li>
     <li>
-      <a routerLinkActive="active" [routerLink]="'customers'"><mat-icon>groups</mat-icon> Customers</a>
+      <a routerLinkActive="active" [routerLink]="'customers'"
+        ><mat-icon>groups</mat-icon> Customers</a
+      >
     </li>
     <li>
-      <a routerLinkActive="active" [routerLink]="'payments'"><i class="fa fa-credit-card"></i>Payments</a>
+      <a routerLinkActive="active" [routerLink]="'payments'"
+        ><mat-icon>payment</mat-icon>Payments</a
+      >
     </li>
     <li>
-      <a routerLinkActive="active" [routerLink]="'sales'"><i class="fa fa-gift"></i>Sales</a>
+      <a routerLinkActive="active" [routerLink]="'sales'"
+        ><mat-icon>shopping_basket</mat-icon>Sales</a
+      >
     </li>
     <li>
-      <a routerLinkActive="active" [routerLink]="'invoices'"><i class="fa fa-ticket"></i>Invoices</a>
+      <a routerLinkActive="active" [routerLink]="'invoices'"
+        ><mat-icon>receipt</mat-icon>Invoices</a
+      >
     </li>
     <li>
-      <a routerLinkActive="active" [routerLink]="'loan-types'"><i class="fas fa-envelope"></i>Loan Plans</a>
+      <a routerLinkActive="active" [routerLink]="'loan-types'"
+        ><mat-icon>next_plan</mat-icon>Loan Plans</a
+      >
     </li>
     <li>
-      <a routerLinkActive="active" [routerLink]="'reports'"><i class="fas fa-chart-bar"></i>Reports</a>
+      <a routerLinkActive="active" [routerLink]="'reports'"
+        ><mat-icon>report</mat-icon>Reports</a
+      >
     </li>
     <li>
-      <a routerLinkActive="active" [routerLink]="'settings'"><i class="fa fa-cogs"></i>Settings</a>
+      <a routerLinkActive="active" [routerLink]="'settings'"
+        ><mat-icon>settings</mat-icon>Settings</a
+      >
     </li>
   </ul>
 </nav>
