--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -1,33 +1,35 @@
 <mat-card class="example-card">
   <div class="add-customer">
-    <div class="add-btn">
-    </div>
+    <div class="add-btn"></div>
     <div class="add-btn">
       <button mat-button color="primary" (click)="addSales()">Add Sales</button>
     </div>
   </div>
-  <br>
+  <br />
   <mat-form-field>
     <mat-label>Search Product...</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Kiwi" #input />
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex. Kiwi"
+      #input
+    />
   </mat-form-field>
-
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!-- cust_id Column -->
     <ng-container matColumnDef="cust_Id">
       <th mat-header-cell *matHeaderCellDef>Customer</th>
-      <td mat-cell *matCellDef="let element">Id : {{ element.customer.id }}
-        <p>
-          Name : {{ element.customer.name }}
-        </p>
+      <td mat-cell *matCellDef="let element">
+        Id : {{ element.customer.id }}
+        <p>Name : {{ element.customer.name }}</p>
       </td>
     </ng-container>
     <!-- prod_Id Column -->
     <ng-container matColumnDef="prod_Id">
       <th mat-header-cell *matHeaderCellDef>Product</th>
-      <td mat-cell *matCellDef="let element">Id : {{ element.product.id }}<p>
-          Name : {{ element.product.name }}
-        </p>
+      <td mat-cell *matCellDef="let element">
+        Id : {{ element.product.id }}
+        <p>Name : {{ element.product.name }}</p>
       </td>
     </ng-container>
     <!-- Product Quantity Column -->
@@ -58,13 +60,11 @@
     <!-- createdAt Column -->
     <ng-container matColumnDef="createdAt">
       <th mat-header-cell *matHeaderCellDef>createdAt</th>
-      <td mat-cell *matCellDef="let element">{{ element.createdAt|date}}</td>
+      <td mat-cell *matCellDef="let element">{{ element.createdAt | date }}</td>
     </ng-container>
     <!-- action Column -->
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef>
-        Action
-      </th>
+      <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let element">
         <div class="actn-btn">
           <div class="child-btn">
@@ -87,9 +87,10 @@
         No data matching the filter "{{ input.value }}"
       </td>
     </tr>
-
   </table>
-  <mat-paginator #paginator [pageSizeOptions]="[8, 15, 20]" showFirstLastButtons></mat-paginator>
-
-
+  <mat-paginator
+    #paginator
+    [pageSizeOptions]="[8, 15, 20]"
+    showFirstLastButtons
+  ></mat-paginator>
 </mat-card>
